# CreditRiskProbabilityModel

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: unittests.yml
config/: data_paths.yaml  featrues.yaml  model_params.yaml
data/: processed.dvc  raw.dvc
models/: .gitignore  mlruns.dvc  transformers.dvc
notebooks/: EDA_analysis.ipynb  Model_Data_Processing.ipynb  README.md  model-training-and-tracking .ipynb
src/api/: main.py  pydantic_models.py
src/core/: Feature_engineering.py  proxy_target.py  woe_transformer.py
src/models/: model_trainer.py
src/services/: mlflow_services.py
src/utils/: preprocessing_bundle.py  utils.py
tests/integration/: test_api_main.py  test_mlflow_services.py
tests/unit/: test_Feature_engineering.py  test_model_trainer.py  test_preprocessing_bundle.py  test_proxy_target.py  test_utils.py  test_woe_transformer.py
